--- a/package.json
+++ b/package.json
@@ -1,43 +1,39 @@
 {
-  "name": "@landing/006-next",
-  "version": "0.1.0",
+  "name": "coming-soon",
+  "desription": "Clean Coming Soon Template (Tailwind CSS, NextJs & HTML5)",
+  "version": "1.0.0",
+  "keywords": [
+    "coming soon",
+    "tailwind",
+    "tailwindcss",
+    "nextjs",
+    "html"
+  ],
+  "author": "Themeptation",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "serve": "next start",
+    "start": "next start",
+    "lint": "next lint",
     "export": "next export",
-    "postbuild": "next-sitemap"
+    "type-check": "tsc"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.2.6",
-    "dotenv": "^8.2.0",
-    "framer-motion": "^2.7.5",
-    "globby": "^11.0.0",
-    "isomorphic-unfetch": "^3.0.0",
-    "next": "10.2.3",
-    "next-compose-plugins": "^2.2.0",
-    "next-optimized-images": "^2.5.5",
-    "rc-drawer": "^4.1.0",
-    "react": "16.13.1",
-    "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "16.13.1",
-    "react-ga": "^3.1.2",
-    "react-icons": "^3.9.0",
-    "react-id-swiper": "^4.0.0",
-    "react-modal-video": "1.2.6",
-    "react-scroll": "^1.8.0",
-    "react-stickynode": "^3.0.3",
-    "react-waypoint": "^9.0.2",
-    "swiper": "^6.3.1",
-    "theme-ui": "^0.3.1",
-    "typeface-dm-sans": "^1.1.3"
+    "autoprefixer": "^10.4.0",
+    "next": "latest",
+    "postcss": "^8.3.11",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "sharp": "^0.29.3",
+    "tailwindcss": "^2.2.19",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "12.0.4"
   },
   "devDependencies": {
-    "imagemin-mozjpeg": "^9.0.0",
-    "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^8.0.0",
-    "prettier": "^2.1.2",
-    "next-sitemap": "^1.2.4"
+    "@types/node": "^16.11.7",
+    "@types/react": "^17.0.35",
+    "@types/react-dom": "^17.0.11",
+    "typescript": "4.5.2"
   }
 }
